<resources>
    <string name="app_name">Quizzy</string>
    <string name="quizzy">Quizzy</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="hint_name">Name</string>
    <string name="btn_start">Start</string>
    <string name="what_country_does_the_flag_belongs_to">What country does the flag belongs to?</string>
    <string name="_0_10">0/10</string>
    <string name="argentina">Argentina</string>
    <string name="australia">Australia</string>
    <string name="Brazil">Brazil</string>
    <string name="Peru">Peru</string>
    <string name="peru">Peru</string>
    <string name="brazil">Brazil</string>
    <string name="submit">SUBMIT</string>
    <string name="image">Image</string>
    <string name="result">Result</string>
    <string name="congratulations">Congratulations!</string>
    <string name="username">Username</string>
    <string name="finish">Finish</string>
    <string name="your_total_score_is_9_out_of_10">Your total score is 9 out of 10</string>
</resources>